Feat：初始化左侧导航栏样式，自定义图标按钮控件

--- a/WenElevating.Todo/App.xaml
+++ b/WenElevating.Todo/App.xaml
@@ -8,6 +8,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/WenElevating.Resources;Component/Fonts/FontsDictionary.xaml" />
+                <ResourceDictionary Source="/WenElevating.Resources;Component/ControlStyles.xaml" />
+                <ResourceDictionary Source="/WenElevating.Resources;Component/SvgXamlResources.xaml" />
+                <ResourceDictionary Source="/WenElevating.Resources;Component/ThemeColors/LightColors.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
