--- a/WenElevating.Resources/ControlStyles.xaml
+++ b/WenElevating.Resources/ControlStyles.xaml
@@ -6,9 +6,14 @@
     <Style x:Key="Todo_CommonWindowStyle" TargetType="{x:Type Window}">
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
-                <WindowChrome GlassFrameThickness="-1" NonClientFrameEdges="Left" />
+                <WindowChrome
+                    GlassFrameThickness="-1"
+                    NonClientFrameEdges="Left"
+                    ResizeBorderThickness="5" />
             </Setter.Value>
         </Setter>
+        <Setter Property="MaxWidth" Value="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}" />
+        <Setter Property="MaxHeight" Value="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}" />
     </Style>
 
     <!--  IconButton  -->
@@ -90,6 +95,40 @@
         </Setter>
     </Style>
 
+    <Style x:Key="Todo_SystemIconButtonStyle" TargetType="{x:Type controls:IconButton}">
+        <Setter Property="Opacity" Value="1" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type controls:IconButton}">
+                    <Border
+                        x:Name="Border"
+                        Width="{TemplateBinding Width}"
+                        Height="{TemplateBinding Height}"
+                        Background="{TemplateBinding Background}"
+                        CornerRadius="0"
+                        Cursor="Hand">
+                        <Image
+                            x:Name="Image"
+                            Width="{Binding IconWidth, RelativeSource={RelativeSource TemplatedParent}}"
+                            Height="{Binding IconHeight, RelativeSource={RelativeSource TemplatedParent}}"
+                            Margin="5,5"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Opacity="{TemplateBinding Opacity}"
+                            Source="{Binding Icon, RelativeSource={RelativeSource TemplatedParent}}" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#ECECEC" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <!--  RadioIconButton  -->
     <Style x:Key="Todo_CommonRadioIconButtonStyle" TargetType="{x:Type controls:IconRadioButton}">
@@ -145,7 +184,7 @@
     </Style>
 
     <Style x:Key="Todo_CommonRadioIconButtonNoMouseOverStyle" TargetType="{x:Type controls:IconRadioButton}">
-        <Setter Property="Opacity" Value="0.9" />
+        <Setter Property="Opacity" Value="1" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="Focusable" Value="False" />
