--- a/WenElevating.Todo/MainWindow.xaml
+++ b/WenElevating.Todo/MainWindow.xaml
@@ -135,7 +135,10 @@
             </Grid>
         </Border>
 
-        <Border Grid.Column="1" Margin="0,0,3,0">
+        <Border
+            x:Name="NoClientBorder"
+            Grid.Column="1"
+            Margin="0,0,3,0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30" />
