--- a/WenElevating.Resources/ControlStyles.xaml
+++ b/WenElevating.Resources/ControlStyles.xaml
@@ -130,6 +130,45 @@
         </Setter>
     </Style>
 
+    <Style x:Key="Todo_ListIconButtonStyle" TargetType="{x:Type controls:IconButton}">
+        <Setter Property="Opacity" Value="1" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type controls:IconButton}">
+                    <Border
+                        x:Name="Border"
+                        Width="{TemplateBinding Width}"
+                        Height="{TemplateBinding Height}"
+                        Background="{TemplateBinding Background}"
+                        CornerRadius="0"
+                        Cursor="Hand">
+                        <StackPanel Orientation="Horizontal">
+                            <Image
+                                x:Name="Image"
+                                Width="{Binding IconWidth, RelativeSource={RelativeSource TemplatedParent}}"
+                                Height="{Binding IconHeight, RelativeSource={RelativeSource TemplatedParent}}"
+                                Margin="5,5"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Opacity="{TemplateBinding Opacity}"
+                                Source="{Binding Icon, RelativeSource={RelativeSource TemplatedParent}}" />
+
+                            <TextBlock Text="{Binding}" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#ECECEC" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <!--  RadioIconButton  -->
     <Style x:Key="Todo_CommonRadioIconButtonStyle" TargetType="{x:Type controls:IconRadioButton}">
         <Setter Property="Opacity" Value="0.8" />
@@ -205,6 +244,53 @@
                             Source="{Binding Icon, RelativeSource={RelativeSource TemplatedParent}}" />
                     </Border>
                 </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--  弹窗样式  -->
+    <Style x:Key="Todo_PopupStyle" TargetType="{x:Type Popup}">
+        <Setter Property="AllowsTransparency" Value="True" />
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="HorizontalOffset" Value="10" />
+        <Setter Property="Placement" Value="Right" />
+        <Setter Property="PopupAnimation" Value="Fade" />
+        <Setter Property="StaysOpen" Value="False" />
+        <Setter Property="IsOpen" Value="True" />
+    </Style>
+
+    <!--  弹窗阴影边框样式  -->
+    <Style x:Key="Todo_PopupShadowBorderStyle" TargetType="{x:Type Border}">
+        <Setter Property="Margin" Value="5" />
+        <Setter Property="Background" Value="{DynamicResource PopupBackground}" />
+        <Setter Property="CornerRadius" Value="5" />
+        <Setter Property="Effect">
+            <Setter.Value>
+                <BlurEffect
+                    KernelType="Box"
+                    Radius="2"
+                    RenderingBias="Quality" />
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--  弹窗内容边框样式  -->
+    <Style x:Key="Todo_PopupContentBorderStyle" TargetType="{x:Type Border}">
+        <Setter Property="Margin" Value="6" />
+        <Setter Property="Padding" Value="1,0,0,0" />
+        <Setter Property="Background" Value="{DynamicResource PopupContentBackground}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="CornerRadius" Value="5" />
+        <Setter Property="BorderBrush" Value="{DynamicResource PopupContentBackground}" />
+    </Style>
+
+    <!--  ToggleButton样式  -->
+    <Style x:Key="Todo_IconToggleButtonStyle" TargetType="{x:Type controls:IconToggleButton}">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type controls:IconToggleButton}" />
             </Setter.Value>
         </Setter>
     </Style>
