--- a/WenElevating.Todo/App.xaml
+++ b/WenElevating.Todo/App.xaml
@@ -2,8 +2,7 @@
     x:Class="WenElevating.Todo.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:WenElevating.Todo"
-    StartupUri="MainWindow.xaml">
+    xmlns:local="clr-namespace:WenElevating.Todo">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
