Feat：新增页面配置信息注解，自定义页面依赖注入函数

--- a/WenElevating.Todo/MainWindow.xaml
+++ b/WenElevating.Todo/MainWindow.xaml
@@ -45,6 +45,8 @@
                         Cursor="Hand"
                         RenderOptions.BitmapScalingMode="HighQuality"
                         Source="/WenElevating.Todo;component/Assets/avatar.jpg" />
+
+                    <ItemsControl />
                     <!--  任务  -->
                     <controls:IconRadioButton
                         x:Name="LeftSidebarTaskButton"
