--- a/WenElevating.Todo/Pages/PunchPage.xaml
+++ b/WenElevating.Todo/Pages/PunchPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<local:ApplicationPageBase
     x:Class="WenElevating.Todo.Pages.PunchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,4 +14,4 @@
     <Grid>
         <TextBlock Text="Punch Page" />
     </Grid>
-</Page>
+</local:ApplicationPageBase>
